- Added an exception handler, to replace the PHP5 Fatal Error Handler.
- Added the date time to the output.
- Added analysis of the meta data of an object.
- Change: Lots of deprecations.
- Change: Moved the skin render classes to the source folder.
- Change: Dropped PHP 5.3 and PHP 5.4 support.
- Change: Moved the last hardcoded html tags to the skin renderers.
- Bugfix: Fixes some "bugs" SonarCube found in the unit test fixtures,
  to prevent bad ratings.
- Bugfix: Check if the developer handle is actually a string.
- Bugfix: Added a missing check in the url determination in the
  timer controller
- Bugfix: The registering of blacklisted methods and classes for
  the debug methods work now, as they should.
- Bugfix: The rewriting of singleton classes in the pool does not
  work.
- Bugfix: Adding additional data in the code generation is not
  rendered.
- Bugfix: Added the plugin list to the (fatal) error handler
  display of the smokygrey skin.
- Bugfix: Wrong display of null and boolean default values in the
  code generation and method analysis.
- Bugfix: Display of wrong filename when a kreXX resource is not readable.
- Bugfix: The registry will not return values that are considered empty().

3.0.2
- Added classname to the declaration analysis of properties.
- Added analysis of cUrl resources.
- Added a check for the content type to the ajax detection.
- Improved the jump to element of the Hans skin.
- Change: Protected properties are now wrapped again.
- Bugfix: Replace the $hellip; in the file service, it may cause
  double escaping issues in the backend of some systems.
- Bugfix: The method analysis doesn't take traits into account.
- Bugfix: The property analysis doesn't take traits into account.
- Bugfix: Remove the copy-pasta spaces from the skins.
- Bugfix: Cut off parameter analysis
- Bugfix: Property analysis does not handle predefined classes
  correctly.
- Bugfix: "Autoloading" may fail with a weird directory path